--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -11,6 +11,17 @@
   <script src="lib/jasmine-2.2.0/jasmine-html.js"></script>
   <script src="lib/jasmine-2.2.0/boot.js"></script>
 
+    <script src="../www/dist/libs.min.js"></script>
+
+    <script src="../www/lib/angular-mocks/angular-mocks.js"></script>
+
+    <script src="../www/dist/app.min.js"></script>
+
+
+    <script src="spec/controllers-spec.js"></script>
+    <script src="spec/services-spec.js"></script>
+    <script src="spec/authentication/authenticationControllers-spec.js"></script>
+
 
 </head>
 
